sfdx-source/nca-watrs/main/objects/NCA_Production__c/NCA_Production__c.object-meta.xml
<CustomObject>
    <label>NCA Production</label>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Production ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCA Production</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>