sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Approval_Pending__c.field-meta.xml
<CustomField>
    <fullName>Approval_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Pending</label>
    <type>Checkbox</type>
</CustomField>