sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>