sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Duplicate_Record__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Record</label>
    <type>Checkbox</type>
</CustomField>