sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>Manual_Entry__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Manual Entry</label>
    <type>Checkbox</type>
</CustomField>