sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/MEL_Completed_Letters_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>MEL_Completed_Letters_Created_Date__c</fullName>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>MEL (Completed Letters) - Created Date</label>
    <type>Date</type>
</CustomField>