sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/MEL_Completed_Letters_Letter_Code__c.field-meta.xml
<CustomField>
    <fullName>MEL_Completed_Letters_Letter_Code__c</fullName>
    <label>MEL (Completed Letters) - Letter Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>700</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>