sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/MEL_Completed_Letters_Veteran_ID__c.field-meta.xml
<CustomField>
    <fullName>MEL_Completed_Letters_Veteran_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MEL (Completed Letters) - Veteran ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>