sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/MEL_Work_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>MEL_Work_Completed_Date__c</fullName>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>MEL - Work Completed Date</label>
    <type>Date</type>
</CustomField>