sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Name_Profile__c.field-meta.xml
<CustomField>
    <fullName>Name_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name/Profile</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCA Production</relationshipLabel>
    <relationshipName>NCA_Production</relationshipName>
    <type>Lookup</type>
</CustomField>