sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/NCA_WATRS_Case_C_Date__c.field-meta.xml
<CustomField>
    <fullName>NCA_WATRS_Case_C_Date__c</fullName>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>NCA WATRS Case - C Date</label>
    <type>Date</type>
</CustomField>