sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/NCA_WATRS_Case_Days_Difference__c.field-meta.xml
<CustomField>
    <fullName>NCA_WATRS_Case_Days_Difference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NCA WATRS Case - Days Difference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>