sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/NCA_WATRS_Case_Veteran_ID__c.field-meta.xml
<CustomField>
    <fullName>NCA_WATRS_Case_Veteran_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NCA WATRS Case - Veteran ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>