sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Site_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Location__c</fullName>
    <label>Site Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCA_WATRS_Site_Locations</valueSetName>
    </valueSet>
</CustomField>