sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NCA Production</relationshipLabel>
    <relationshipName>NCA_Production</relationshipName>
    <type>Lookup</type>
</CustomField>