sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Site_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Site_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCA Production (Site Supervisor)</relationshipLabel>
    <relationshipName>NCA_Production3</relationshipName>
    <type>Lookup</type>
</CustomField>