sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Site_Supervisor_User__c.field-meta.xml
<CustomField>
    <fullName>Site_Supervisor_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCA_Production1</relationshipName>
    <type>Lookup</type>
</CustomField>