sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <label>Status Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>