sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Supervisor_Name2__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCA Production (Supervisor Name)</relationshipLabel>
    <relationshipName>NCA_Production2</relationshipName>
    <type>Lookup</type>
</CustomField>