sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Name</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>NCA Production</relationshipLabel>
    <relationshipName>NCA_Production</relationshipName>
    <type>Lookup</type>
</CustomField>