sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCA Production (Team Lead)</relationshipLabel>
    <relationshipName>NCA_Production1</relationshipName>
    <type>Lookup</type>
</CustomField>