sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Team_Lead_User__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCA_Production</relationshipName>
    <type>Lookup</type>
</CustomField>