sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Veteran_ID__c.field-meta.xml
<CustomField>
    <fullName>Veteran_ID__c</fullName>
    <label>Veteran ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>