sfdx-source/nca-watrs/main/objects/NCA_Production__c/fields/Veteran_ID_MEL__c.field-meta.xml
<CustomField>
    <fullName>Veteran_ID_MEL__c</fullName>
    <label>Veteran ID MEL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>