sfdx-source/nca-watrs/main/objects/NCA_Production__c/recordTypes/Completed_Case.recordType-meta.xml
<RecordType>
    <fullName>Completed_Case</fullName>
    <active>true</active>
    <description>Use to add a new completed case production record.</description>
    <label>Completed Case</label>
</RecordType>