sfdx-source/nca-watrs/main/objects/NCA_Production__c/recordTypes/Memorial_Enterprise_Letter.recordType-meta.xml
<RecordType>
    <fullName>Memorial_Enterprise_Letter</fullName>
    <active>true</active>
    <label>Memorial Enterprise Letter</label>
</RecordType>