sfdx-source/nca-watrs/main/objects/NCA_Production__c/recordTypes/Production.recordType-meta.xml
<RecordType>
    <fullName>Production</fullName>
    <active>true</active>
    <label>Production</label>
</RecordType>