sfdx-source/nca-watrs/main/objects/NCA_Production__c/validationRules/Duplicate_Production_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_Production_Record</fullName>
    <active>true</active>
    <errorConditionFormula>Duplicate_Record__c =TRUE</errorConditionFormula>
    <errorMessage>An existing Production Record for this Veteran ID and NCA WATRS Case - C Date/MEL - Work Completed Date has already been entered.</errorMessage>
</ValidationRule>