sfdx-source/nca-watrs/main/objects/NCA_Production__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>NCA_WATRS_Case_Assembly_Date__c</columns>
    <columns>NCA_WATRS_Case_Days_Difference__c</columns>
    <columns>MEL_Completed_Letters_Letter_Code__c</columns>
    <columns>MEL_Work_Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NCA_Production__c.Completed_Case</value>
    </filters>
    <label>All</label>
</ListView>