sfdx-source/nca-watrs/main/objects/NCA_Production__c/listViews/Management_Approval_Queue_NCA_Production.listView-meta.xml
<ListView>
    <fullName>Management_Approval_Queue_NCA_Production</fullName>
    <filterScope>Queue</filterScope>
    <label>Management Approval Queue</label>
    <queue>Management_Approval_Queue</queue>
</ListView>