sfdx-source/nca-watrs/main/objects/NCA_Production__c/listViews/Production_Approval_Queue_Nashville.listView-meta.xml
<ListView>
    <fullName>Production_Approval_Queue_Nashville</fullName>
    <columns>NAME</columns>
    <columns>Name_Profile__c</columns>
    <columns>NCA_WATRS_Case_Assembly_Date__c</columns>
    <columns>NCA_WATRS_Case_Days_Difference__c</columns>
    <columns>MEL_Completed_Letters_Letter_Code__c</columns>
    <columns>MEL_Work_Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>Site_Location__c</field>
        <operation>equals</operation>
        <value>Nashville</value>
    </filters>
    <label>Production Approval Queue - Nashville</label>
    <sharedTo>
        <group>NCA_Nashville_Share_Read_Write</group>
    </sharedTo>
</ListView>