sfdx-source/nca-watrs/main/objects/NCA_Production__c/listViews/Time_Approval_Request_Queue_NCA_Production.listView-meta.xml
<ListView>
    <fullName>Time_Approval_Request_Queue_NCA_Production</fullName>
    <columns>NAME</columns>
    <columns>NCA_WATRS_Case_Assembly_Date__c</columns>
    <columns>NCA_WATRS_Case_Days_Difference__c</columns>
    <columns>MEL_Completed_Letters_Letter_Code__c</columns>
    <columns>MEL_Work_Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Pending__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Production Approval Requests</label>

</ListView>